code structure complete. mini_batch_creation and feature_label_creation complete

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -102,6 +102,8 @@
     "    #W and B are lists containing weights and biases matrices - the i'th item in W is the i'th set of weights (i.e the second item in W is the matrix of weights between the first and second hidden layers)\n",
     "    \n",
     "    x = 0\n",
+    "    \n",
+    "    #TODO: check if these initializations are appropriate\n",
     "    while x < len(layers):\n",
     "        if x == 0:\n",
     "            W.append(np.random.rand(layers[x],num_features))\n",
@@ -124,13 +126,13 @@
    "source": [
     "def mini_batch_creation(train_neg_index_list,train_pos_index_list,mini_batch_size)\n",
     "    #list of indices for a given mini-batch (used to access the images for this mini-batch from the dataset)\n",
-    "    pos_mini_batch_index_list = []\n",
-    "    neg_mini_batch_index_list = []\n",
+    "    pos_mini_batch_indices_list = []\n",
+    "    neg_mini_batch_indices_list = []\n",
     "\n",
     "        \n",
     "    num_instances_batched=0\n",
     "\n",
-    "    #iterate through and add all the mini batches for this epoch to the collector lists pos_mini_batch_index_list & neg_mini_batch_index_list\n",
+    "    #iterate through and add all the mini batches for this epoch to the collector lists pos_mini_batch_indices_list & neg_mini_batch_indices_list\n",
     "    #(only making sure we get all the positive instances.. we don't need to iterate through ALL negative examples if theres a mismatch between # pos and # neg)\n",
     "    while num_instances_batched < num_train_pos:\n",
     "\n",
@@ -144,10 +146,10 @@
     "        #NOTE: we grab from the first few indices (wraparound) if we have to loop around/duplicate instances to complete batches... this is same as grabbing randoms to fill in because the list is randomized\n",
     "        #if we don't have a wrap-around\n",
     "        if slice_end_neg > slice_start_neg:\n",
-    "            neg_mini_batch_index_list.append(train_neg_index_list[slice_start_neg:slice_end_neg]) \n",
+    "            neg_mini_batch_indices_list.append(train_neg_index_list[slice_start_neg:slice_end_neg]) \n",
     "        #if we have a wrap-around\n",
     "        else:\n",
-    "            neg_mini_batch_index_list.append(train_neg_index_list[slice_start_neg:] + train_neg_index_list[:slice_end_neg]) \n",
+    "            neg_mini_batch_indices_list.append(train_neg_index_list[slice_start_neg:] + train_neg_index_list[:slice_end_neg]) \n",
     "\n",
     "\n",
     "\n",
@@ -157,9 +159,9 @@
     "\n",
     "\n",
     "        if slice_end_pos > slice_start_pos:\n",
-    "            pos_mini_batch_index_list.append(train_pos_index_list[slice_start_pos:slice_end_pos])\n",
+    "            pos_mini_batch_indices_list.append(train_pos_index_list[slice_start_pos:slice_end_pos])\n",
     "        else:\n",
-    "            pos_mini_batch_index_list.append(train_pos_index_list[slice_start_pos:] + train_pos_index_list[:slice_end_pos]) \n",
+    "            pos_mini_batch_indices_list.append(train_pos_index_list[slice_start_pos:] + train_pos_index_list[:slice_end_pos]) \n",
     "\n",
     "\n",
     "\n",
@@ -168,7 +170,7 @@
     "        \n",
     "        \n",
     "            \n",
-    "    return neg_mini_batch_index_list, pos_mini_batch_index_list"
+    "    return neg_mini_batch_indices_list, pos_mini_batch_indices_list"
    ]
   },
   {
@@ -177,48 +179,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def feature_label_creation(neg_mini_batch_index, pos_mini_batch_index, train_pos_dset, train_neg_dset):\n",
-    "    return \n",
-    "    return features, labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gradient_descent(parameters, features, labels, num_features):\n",
-    "    \n",
-    "    for x in:\n",
-    "        \n",
+    "def feature_label_creation(neg_mini_batch_indices, pos_mini_batch_indices, train_neg_dset, train_pos_dset, mini_batch_size, num_features):\n",
     "    #matrices containing our features and their labels\n",
     "            \n",
     "    \n",
-    "        #(m,n[0])\n",
-    "        features = np.empty([mini_batch_size,num_features])    \n",
+    "    #(m,n[0])\n",
+    "    features = np.empty([mini_batch_size,num_features])    \n",
     "\n",
-    "        #(1,m)\n",
-    "        labels = np.empty([mini_batch_size,1])                       \n",
+    "    #(1,m) ... will transpose upon return\n",
+    "    labels = np.empty([mini_batch_size,1])                       \n",
+    "    \n",
+    "    counter = 0\n",
     "\n",
+    "    #fancy indexing? super slow - 10-20x slower because sorting of indices is needed\n",
+    "    #extract the dataset images pointed to by the current minibatch, combining both negative and positive classes\n",
+    "    for index in neg_mini_batch_indices:\n",
+    "        features[counter] = train_neg_dset[index]\n",
     "\n",
-    "\n",
-    "        counter = 0\n",
-    "\n",
-    "        #fancy indexing? super slow - 10-20x slower because sorting of indices is needed\n",
-    "        #extract the dataset images pointed to by the current minibatch, combining both negative and positive classes\n",
-    "        for index in neg_mini_batch_index_list:\n",
-    "            features[counter] = train_neg_dset[index]\n",
-    "\n",
-    "            labels[counter] = 0\n",
-    "            counter+=1\n",
+    "        labels[counter] = 0\n",
+    "        counter+=1\n",
     "\n",
     "\n",
-    "        for index in pos_mini_batch_index_list:\n",
-    "            features[counter] = train_pos_dset[index]\n",
+    "    for index in pos_mini_batch_indices:\n",
+    "        features[counter] = train_pos_dset[index]\n",
     "\n",
-    "            labels[counter] = 1\n",
-    "            counter+=1  \n",
+    "        labels[counter] = 1\n",
+    "        counter+=1  \n",
+    "            \n",
+    "    if counter not == mini_batch_size:\n",
+    "        print(\"error: batch size - mini batch indices mismatch\")\n",
+    "    \n",
+    "    return features, labels.transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def forwardprop():\n",
+    "    \n",
+    "    #TODO: variable g(Z) setting/matrix "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def backprop():\n",
+    "    \n",
+    "#TODO: variable g(Z) setting/matrix    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gradient_descent(parameters, features, labels, num_features, learning_rate):\n",
+    "        \n",
+    "       \n",
+    "    \n",
+    "\n",
+    "    #start code here\n",
+    "        \n",
     "            \n",
     "            \n",
     "        ####\n",
@@ -245,11 +273,7 @@
     "        \n",
     "        \n",
     "        \n",
-    "        print(features)\n",
-    "        print(features.shape)\n",
-    "        print(labels)\n",
-    "        print(labels.shape)\n",
-    "            \n",
+    "        \n",
     "    return parameters"
    ]
   },
@@ -259,8 +283,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def prediction():\n",
+    "    #TODO write code for eval % for val or test if exists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "        \n",
-    "def model(train_pos_dset, train_neg_dset, val_pos_dset, val_neg_dset, mini_batch_size =32, layers, epochs = 1000, print_cost=False):\n",
+    "def model(train_pos_dset, train_neg_dset, val_pos_dset, val_neg_dset, mini_batch_size =32, layers = [1], epochs = 1000, print_cost=False, learning_rate=0.005):\n",
     "\n",
     "    num_train_neg, num_train_pos, num_features, train_neg_index_list, train_pos_index_list = training_info(train_pos_dset, train_neg_dset)\n",
     "    \n",
@@ -273,22 +307,25 @@
     "        random.shuffle(train_neg_index_list)\n",
     "        random.shuffle(train_pos_index_list)\n",
     "\n",
-    "        neg_mini_batch_index_list, pos_mini_batch_index_list = mini_batch_creation(train_neg_index_list,train_pos_index_list,mini_batch_size)\n",
+    "        neg_mini_batch_indices_list, pos_mini_batch_indices_list = mini_batch_creation(train_neg_index_list,train_pos_index_list,mini_batch_size)\n",
     "        \n",
     "        #iterate through all the mini-batches\n",
-    "        for neg_mini_batch, pos_mini_batch in zip(neg_mini_batch_index_list, pos_mini_batch_index_list):\n",
-    "            features, labels = feature_label_creation(neg_mini_batch, pos_mini_batch)\n",
-    "            parameters = gradient_descent(parameters, features, labels, num_features)\n",
+    "        for neg_mini_batch_indices, pos_mini_batch_indices in zip(neg_mini_batch_indices_list, pos_mini_batch_indices_list):\n",
+    "            \n",
+    "            features, labels = feature_label_creation(neg_mini_batch_indices, pos_mini_batch_indices,train_neg_dset, train_pos_dset, mini_batch_size, num_features)\n",
+    "            parameters = gradient_descent(parameters, features, labels, num_features, learning_rate)\n",
     "        \n",
+    "            #maybe also write code for printing cost\n",
+    "             #maybe write code for % success at test & val\n",
+    "                \n",
+    "        #TODO write code for printing cost\n",
+    "        #maybe write code for % success at test & val\n",
+    "    \n",
     "        #iterate to next epoch\n",
-    "        epoch-=1"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "f.close()"
+    "        epoch-=1\n",
+    "    \n",
+    "    #TODO write code for % success at test & val, cost using prediction()\n",
+    "    "
    ]
   },
   {
@@ -296,7 +333,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f.close()"
+   ]
   },
   {
    "cell_type": "code",
