prediction and accuracy functions established. more descriptive variables substituted in

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -124,15 +124,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mini_batch_creation(train_neg_index_list,train_pos_index_list,mini_batch_size)\n",
+    "def mini_batch(train_neg_index_list,train_pos_index_list,mini_batch_size)\n",
     "    #list of indices for a given mini-batch (used to access the images for this mini-batch from the dataset)\n",
-    "    pos_mini_batch_indices_list = []\n",
-    "    neg_mini_batch_indices_list = []\n",
+    "    pos_mini_batches = []\n",
+    "    neg_mini_batches = []\n",
     "\n",
     "        \n",
     "    num_instances_batched=0\n",
     "\n",
-    "    #iterate through and add all the mini batches for this epoch to the collector lists pos_mini_batch_indices_list & neg_mini_batch_indices_list\n",
+    "    #iterate through and add all the mini batches for this epoch to the collector lists pos_mini_batches & neg_mini_batches\n",
     "    #(only making sure we get all the positive instances.. we don't need to iterate through ALL negative examples if theres a mismatch between # pos and # neg)\n",
     "    while num_instances_batched < num_train_pos:\n",
     "\n",
@@ -146,10 +146,10 @@
     "        #NOTE: we grab from the first few indices (wraparound) if we have to loop around/duplicate instances to complete batches... this is same as grabbing randoms to fill in because the list is randomized\n",
     "        #if we don't have a wrap-around\n",
     "        if slice_end_neg > slice_start_neg:\n",
-    "            neg_mini_batch_indices_list.append(train_neg_index_list[slice_start_neg:slice_end_neg]) \n",
+    "            neg_mini_batches.append(train_neg_index_list[slice_start_neg:slice_end_neg]) \n",
     "        #if we have a wrap-around\n",
     "        else:\n",
-    "            neg_mini_batch_indices_list.append(train_neg_index_list[slice_start_neg:] + train_neg_index_list[:slice_end_neg]) \n",
+    "            neg_mini_batches.append(train_neg_index_list[slice_start_neg:] + train_neg_index_list[:slice_end_neg]) \n",
     "\n",
     "\n",
     "\n",
@@ -159,9 +159,9 @@
     "\n",
     "\n",
     "        if slice_end_pos > slice_start_pos:\n",
-    "            pos_mini_batch_indices_list.append(train_pos_index_list[slice_start_pos:slice_end_pos])\n",
+    "            pos_mini_batches.append(train_pos_index_list[slice_start_pos:slice_end_pos])\n",
     "        else:\n",
-    "            pos_mini_batch_indices_list.append(train_pos_index_list[slice_start_pos:] + train_pos_index_list[:slice_end_pos]) \n",
+    "            pos_mini_batches.append(train_pos_index_list[slice_start_pos:] + train_pos_index_list[:slice_end_pos]) \n",
     "\n",
     "\n",
     "\n",
@@ -170,7 +170,7 @@
     "        \n",
     "        \n",
     "            \n",
-    "    return neg_mini_batch_indices_list, pos_mini_batch_indices_list"
+    "    return neg_mini_batches, pos_mini_batches"
    ]
   },
   {
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def feature_label_creation(neg_mini_batch_indices, pos_mini_batch_indices, train_neg_dset, train_pos_dset, mini_batch_size, num_features):\n",
+    "def feature_label(neg_indices, pos_indices, train_neg_dset, train_pos_dset, mini_batch_size, num_features):\n",
     "    #matrices containing our features and their labels\n",
     "            \n",
     "    \n",
@@ -193,14 +193,14 @@
     "\n",
     "    #fancy indexing? super slow - 10-20x slower because sorting of indices is needed\n",
     "    #extract the dataset images pointed to by the current minibatch, combining both negative and positive classes\n",
-    "    for index in neg_mini_batch_indices:\n",
+    "    for index in neg_indices:\n",
     "        features[counter] = train_neg_dset[index]\n",
     "\n",
     "        labels[counter] = 0\n",
     "        counter+=1\n",
     "\n",
     "\n",
-    "    for index in pos_mini_batch_indices:\n",
+    "    for index in pos_indices:\n",
     "        features[counter] = train_pos_dset[index]\n",
     "\n",
     "        labels[counter] = 1\n",
@@ -218,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def forwardprop():\n",
+    "def forward_prop():\n",
     "    \n",
     "    #TODO: variable g(Z) setting/matrix "
    ]
@@ -229,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def backprop():\n",
+    "def back_prop():\n",
     "    \n",
     "#TODO: variable g(Z) setting/matrix    "
    ]
@@ -283,16 +283,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prediction():\n",
-    "    #TODO write code for eval % for val or test if exists"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "        \n",
     "def model(train_pos_dset, train_neg_dset, val_pos_dset, val_neg_dset, mini_batch_size =32, layers = [1], epochs = 1000, print_cost=False, learning_rate=0.005):\n",
     "\n",
@@ -306,13 +296,15 @@
     "        #shuffle the lists of indices, effectively shuffling the training instances among the mini-batches \n",
     "        random.shuffle(train_neg_index_list)\n",
     "        random.shuffle(train_pos_index_list)\n",
-    "\n",
-    "        neg_mini_batch_indices_list, pos_mini_batch_indices_list = mini_batch_creation(train_neg_index_list,train_pos_index_list,mini_batch_size)\n",
     "        \n",
-    "        #iterate through all the mini-batches\n",
-    "        for neg_mini_batch_indices, pos_mini_batch_indices in zip(neg_mini_batch_indices_list, pos_mini_batch_indices_list):\n",
+    "        #neg_mini_batches and pos_mini_batches are lists of lists of indices pointing to training instances\n",
+    "        neg_mini_batches, pos_mini_batches = mini_batch(train_neg_index_list,train_pos_index_list,mini_batch_size)\n",
+    "        \n",
+    "        #iterate through all the mini-batches (e.g. neg_indices contains the indices of a single mini-batch of negative class training instances)\n",
+    "        for neg_indices, pos_indices in zip(neg_mini_batches, pos_mini_batches):\n",
     "            \n",
-    "            features, labels = feature_label_creation(neg_mini_batch_indices, pos_mini_batch_indices,train_neg_dset, train_pos_dset, mini_batch_size, num_features)\n",
+    "            #extract feature list and label list from this mini-batch\n",
+    "            features, labels = feature_label(neg_indices, pos_indices,train_neg_dset, train_pos_dset, mini_batch_size, num_features)\n",
     "            parameters = gradient_descent(parameters, features, labels, num_features, learning_rate)\n",
     "        \n",
     "            #maybe also write code for printing cost\n",
@@ -323,9 +315,28 @@
     "    \n",
     "        #iterate to next epoch\n",
     "        epoch-=1\n",
-    "    \n",
+    "        \n",
+    "    return parameters\n",
     "    #TODO write code for % success at test & val, cost using prediction()\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prediction(test_or_val = \"val\", val_or_test_neg_dset, val_or_test_pos_dset):\n",
+    "    #likely calls model() for parameters\n",
+    "    #likely uses forward_prop() for finding y-hat\n",
+    "    \n",
+    "    #print parameters or log externally\n",
+    "    #TODO write code for eval % for val or test if exists\n",
+    "    \n",
+    "    \n",
+    "def accuracy(test_or_val = \"val\", predictions,val_or_test_neg_dset,val_or_test_pos_dset,show_wrong=3):\n",
+    "    #TODO show accuracy and images that are incorrectly classified - default 3 from each class"
    ]
   },
   {
