prediction and accuracy functions established. more descriptive variables substituted in

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -220,7 +220,10 @@
    "source": [
     "def forward_prop():\n",
     "    \n",
-    "    #TODO: variable g(Z) setting/matrix "
+    "    #TODO: variable g(Z) setting/matrix \n",
+    "    \n",
+    "#may just use leaky relu\n",
+    "#batchnorm in future"
    ]
   },
   {
@@ -231,7 +234,10 @@
    "source": [
     "def back_prop():\n",
     "    \n",
-    "#TODO: variable g(Z) setting/matrix    "
+    "#TODO: variable g(Z) setting/matrix   \n",
+    "#may just use leaky relu\n",
+    "\n",
+    "#batchnorm in future"
    ]
   },
   {
@@ -284,8 +290,11 @@
    "outputs": [],
    "source": [
     "        \n",
-    "def model(train_pos_dset, train_neg_dset, val_pos_dset, val_neg_dset, mini_batch_size =32, layers = [1], epochs = 1000, print_cost=False, learning_rate=0.005):\n",
-    "\n",
+    "def model(train_pos_dset, train_neg_dset, val_pos_dset, val_neg_dset, mini_batch_size =32, layers = [1], epochs = 10000, print_cost=False, learning_rate=0.005):\n",
+    "    \n",
+    "    #lets us track cost and later graph it\n",
+    "    cost_tracker = np.zeroes([1000])\n",
+    "    \n",
     "    num_train_neg, num_train_pos, num_features, train_neg_index_list, train_pos_index_list = training_info(train_pos_dset, train_neg_dset)\n",
     "    \n",
     "    parameters = intialize(layers, num_features)\n",
@@ -312,10 +321,15 @@
     "                \n",
     "        #TODO write code for printing cost\n",
     "        #maybe write code for % success at test & val\n",
-    "    \n",
+    "        \n",
+    "        #TODO track cost\n",
+    "        cost_tracker[10000-epoch] = cost\n",
+    "        \n",
     "        #iterate to next epoch\n",
     "        epoch-=1\n",
-    "        \n",
+    "    \n",
+    "    #TODO print final cost or costs AND plot graph of costs x iterations\n",
+    "    \n",
     "    return parameters\n",
     "    #TODO write code for % success at test & val, cost using prediction()\n",
     "    "
