activation functions coded

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -29,6 +29,7 @@
     "import PIL\n",
     "from matplotlib import pyplot\n",
     "import random\n",
+    "import math\n",
     "\n",
     "#project = \"RashData\"\n",
     "#positive = \"Lyme_Positive\"\n",
@@ -218,11 +219,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def forward_prop():\n",
+    "\n",
+    "def leaky_relu(Z):\n",
+    "    return np.where(Z > 0, Z, 0.01*Z)\n",
+    "    \n",
+    "\n",
+    "def leaky_relu_derivative(Z):\n",
+    "    return np.where(Z > 0, 1.0, 0.05)\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "def sigmoid(Z):\n",
+    "    \n",
+    "    return 1 / (1 + np.exp(-Z))\n",
+    "\n",
+    "\n",
+    "def sigmoid_derivative(Z):\n",
+    "    \n",
+    "    return 1 / (1 + np.exp(-Z)) * (1 - (1 / (1 + np.exp(-Z))))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def forward_prop(features,parameters, layers):\n",
     "    \n",
     "    #TODO: variable g(Z) setting/matrix \n",
     "    \n",
-    "#may just use leaky relu\n",
+    "    \n",
     "#batchnorm in future"
    ]
   },
@@ -246,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradient_descent(parameters, features, labels, num_features, learning_rate):\n",
+    "def gradient_descent(parameters, features, labels, num_features, learning_rate, layers):\n",
     "        \n",
     "       \n",
     "    \n",
@@ -314,7 +341,7 @@
     "            \n",
     "            #extract feature list and label list from this mini-batch\n",
     "            features, labels = feature_label(neg_indices, pos_indices,train_neg_dset, train_pos_dset, mini_batch_size, num_features)\n",
-    "            parameters = gradient_descent(parameters, features, labels, num_features, learning_rate)\n",
+    "            parameters = gradient_descent(parameters, features, labels, num_features, learning_rate, layers)\n",
     "        \n",
     "            #maybe also write code for printing cost\n",
     "             #maybe write code for % success at test & val\n",
