finished forward prop - working on backprop

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -184,7 +184,7 @@
     "    #matrices containing our features and their labels\n",
     "            \n",
     "    \n",
-    "    #(m,n[0])\n",
+    "    #(n[0],m) ... will transpose upon return\n",
     "    features = np.empty([mini_batch_size,num_features])    \n",
     "\n",
     "    #(1,m) ... will transpose upon return\n",
@@ -210,7 +210,7 @@
     "    if counter not == mini_batch_size:\n",
     "        print(\"error: batch size - mini batch indices mismatch\")\n",
     "    \n",
-    "    return features, labels.transpose()"
+    "    return features.transpose(), labels.transpose()"
    ]
   },
   {
@@ -245,10 +245,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def forward_prop(features,parameters, layers):\n",
+    "def forward_prop(parameters, features, layers):\n",
     "    \n",
-    "    #TODO: variable g(Z) setting/matrix \n",
-    "    \n",
+    "    Z = []\n",
+    "    A = []\n",
+    "    G = []\n",
+    "    for layer in range(len(layers)):\n",
+    "        \n",
+    "        \n",
+    "        if layer==0:\n",
+    "            A_last_layer = features\n",
+    "        else:\n",
+    "            A_last_layer = A[layer-1]\n",
+    "        \n",
+    "        \n",
+    "        W_current_layer = parameters['W'][layer]\n",
+    "        B_current_layer = parameters['B'][layer]\n",
+    "        \n",
+    "        \n",
+    "        Z_current_layer = np.dot(W_current_layer, A_last_layer) + B_current_layer\n",
+    "        \n",
+    "        \n",
+    "        #if output layer\n",
+    "        if layer == len(layers)-1:\n",
+    "            G_current_layer = \"sigmoid\"\n",
+    "            A_current_layer = sigmoid(Z_current_layer)\n",
+    "        else:\n",
+    "            G_current_layer = \"leaky_relu\"\n",
+    "            A_current_layer = leaky_relu(Z_current_layer)\n",
+    "        \n",
+    "        \n",
+    "        Z.append(Z_current_layer)\n",
+    "        A.append(A_current_layer)\n",
+    "        G.append(G_current_layer)\n",
+    "            \n",
+    "    return Z, A, G\n",
     "    \n",
     "#batchnorm in future"
    ]
@@ -259,8 +290,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def back_prop():\n",
-    "    \n",
+    "def back_prop(parameters, features, labels, layers, Z, A, G, mini_batch_size):\n",
+    "    for layer in reversed(range(len(layers))):\n",
+    "        \n",
+    "        if layer == len(layers)-1:\n",
+    "            dZ_current_layer = A[layer] - labels\n",
+    "            dW_current_layer = (1/mini_batch_size)*np.dot(dZ_current_layer, A[layer-1].transpose())\n",
+    "            db_current_layer = (1/mini_batch_size)*np.sum(dZ_current_layer, axis=1, keepdims=True)\n",
+    "        dZ_current_layer = \n",
+    "        dW_current_layer =\n",
+    "        db_current_layer = \n",
+    "    return updates\n",
     "#TODO: variable g(Z) setting/matrix   \n",
     "#may just use leaky relu\n",
     "\n",
@@ -273,39 +313,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradient_descent(parameters, features, labels, num_features, learning_rate, layers):\n",
+    "def gradient_descent(parameters, features, labels, num_features, learning_rate, layers, mini_batch_size):\n",
     "        \n",
-    "       \n",
-    "    \n",
-    "\n",
-    "    #start code here\n",
-    "        \n",
-    "            \n",
-    "            \n",
-    "        ####\n",
-    "        # SHALLOW NEURAL NETWORK - SPECIFIC CODE STARTS HERE\n",
-    "        ####\n",
-    "        #\n",
-    "        # \n",
-    "        # FORWARD AND BACKPROP CODE HERE\n",
-    "        # Z = WT X + b\n",
-    "\n",
-    "        Z = np.empty([1,mini_batch_size])\n",
-    "        Z = W.transpose\n",
-    "        # A = sigmoid(Z)\n",
-    "        # dZ = A-Y\n",
-    "        # dw = 1/m XdZT\n",
-    "        # db = 1/m np.sum(dZ)\n",
-    "        # w:= w- alphadw\n",
-    "        # b:= b - alphadb\n",
-    "        #\n",
-    "        #\n",
-    "        ####\n",
-    "        # SHALLOW NEURAL NETWORK - SPECIFIC CODE ENDS HERE\n",
-    "        ####\n",
-    "        \n",
-    "        \n",
-    "        \n",
+    "    Z, A, G = forward_prop(parameters, features, layers)\n",
+    "    updates = back_prop(paramaters, features, labels, layers, Z, A, G, mini_batch_size)\n",
+    "    parameter[W] = parameter[W] - learning_rate * updates[dW]\n",
+    "    parameter[B] = parameter[B] - learning_rate * updates[db]\n",
     "        \n",
     "    return parameters"
    ]
@@ -341,12 +354,12 @@
     "            \n",
     "            #extract feature list and label list from this mini-batch\n",
     "            features, labels = feature_label(neg_indices, pos_indices,train_neg_dset, train_pos_dset, mini_batch_size, num_features)\n",
-    "            parameters = gradient_descent(parameters, features, labels, num_features, learning_rate, layers)\n",
+    "            parameters = gradient_descent(parameters, features, labels, num_features, learning_rate, layers, mini_batch_size)\n",
     "        \n",
-    "            #maybe also write code for printing cost\n",
+    "            #maybe also write code for printing cost after each mini batch\n",
     "             #maybe write code for % success at test & val\n",
     "                \n",
-    "        #TODO write code for printing cost\n",
+    "        #TODO write code for printing cost after each epoch\n",
     "        #maybe write code for % success at test & val\n",
     "        \n",
     "        #TODO track cost\n",
