backprop and cost function complete - working on predict and accuracy functions

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -252,6 +252,7 @@
     "    G = []\n",
     "    for layer in range(len(layers)):\n",
     "        \n",
+    "        A_last_layer = np.zeroes([1,1])\n",
     "        \n",
     "        if layer==0:\n",
     "            A_last_layer = features\n",
@@ -291,16 +292,44 @@
    "outputs": [],
    "source": [
     "def back_prop(parameters, features, labels, layers, Z, A, G, mini_batch_size):\n",
+    "    dZ = []\n",
+    "    dW= []\n",
+    "    db = []\n",
     "    for layer in reversed(range(len(layers))):\n",
+    "        \n",
+    "        \n",
+    "        A_last_layer = np.zeroes([1,1])\n",
+    "        \n",
+    "        \n",
+    "        if layer == 0:\n",
+    "            A_last_layer = features\n",
+    "        else:\n",
+    "            A_last_layer = A[layer-1]\n",
+    "        \n",
     "        \n",
     "        if layer == len(layers)-1:\n",
     "            dZ_current_layer = A[layer] - labels\n",
     "            dW_current_layer = (1/mini_batch_size)*np.dot(dZ_current_layer, A[layer-1].transpose())\n",
     "            db_current_layer = (1/mini_batch_size)*np.sum(dZ_current_layer, axis=1, keepdims=True)\n",
-    "        dZ_current_layer = \n",
-    "        dW_current_layer =\n",
-    "        db_current_layer = \n",
+    "        \n",
+    "        else:\n",
+    "            #TODO implement variable for G that can change depending on layer\n",
+    "            #for now, we know all the hidden layers use leaky relu so we'll directly use that derivative\n",
+    "            dZ_current_layer = np.dot(parameters[W][layer+1].transpose(), dZ[len(layers)-1-layer-1]) * leaky_relu_derivative(Z[layer])\n",
+    "            dW_current_layer = (1/mini_batch_size)*np.dot(dZ_current_layer, A_last_layer.transpose())\n",
+    "            db_current_layer = (1/mini_batch_size)*np.sum(dZ_current_layer, axis=1, keepdims=True)\n",
+    "        \n",
+    "        #these lists are going to be backwards (layer X ... layer 2, layer 1)\n",
+    "        dZ.append(dZ_current_layer)\n",
+    "        dW.append(dW_current_layer)\n",
+    "        db.append(db_current_layer)\n",
+    "    \n",
+    "    dW.reverse()\n",
+    "    db.reverse()\n",
+    "    updates = {'dW':dW,\n",
+    "                'db':db}\n",
     "    return updates\n",
+    "\n",
     "#TODO: variable g(Z) setting/matrix   \n",
     "#may just use leaky relu\n",
     "\n",
@@ -313,14 +342,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def compute_cost(A, labels, mini_batch_size):\n",
+    "     \n",
+    "    cost = -1/mini_batch_size*np.sum(np.multiply(np.log(A[-1]),labels)+np.multiply(np.log(1-A[-1]),1-labels))\n",
+    "               \n",
+    "    return cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def gradient_descent(parameters, features, labels, num_features, learning_rate, layers, mini_batch_size):\n",
     "        \n",
     "    Z, A, G = forward_prop(parameters, features, layers)\n",
+    "    cost = compute_cost(A,labels, mini_batch_size)\n",
     "    updates = back_prop(paramaters, features, labels, layers, Z, A, G, mini_batch_size)\n",
-    "    parameter[W] = parameter[W] - learning_rate * updates[dW]\n",
-    "    parameter[B] = parameter[B] - learning_rate * updates[db]\n",
-    "        \n",
-    "    return parameters"
+    "    \n",
+    "    #update the parameters \n",
+    "    for layer in range(len(parameter[W])):\n",
+    "        parameter[W][layer] = parameter[W][layer] - learning_rate * updates[dW][layer]\n",
+    "        parameter[B][layer] = parameter[B][layer] - learning_rate * updates[db][layer]\n",
+    "    \n",
+    "    #code here if we want to track or print cost after every mini-batch\n",
+    "    \n",
+    "    return parameters, cost"
    ]
   },
   {
@@ -334,6 +382,7 @@
     "    \n",
     "    #lets us track cost and later graph it\n",
     "    cost_tracker = np.zeroes([1000])\n",
+    "    cost = 0\n",
     "    \n",
     "    num_train_neg, num_train_pos, num_features, train_neg_index_list, train_pos_index_list = training_info(train_pos_dset, train_neg_dset)\n",
     "    \n",
@@ -354,11 +403,12 @@
     "            \n",
     "            #extract feature list and label list from this mini-batch\n",
     "            features, labels = feature_label(neg_indices, pos_indices,train_neg_dset, train_pos_dset, mini_batch_size, num_features)\n",
-    "            parameters = gradient_descent(parameters, features, labels, num_features, learning_rate, layers, mini_batch_size)\n",
+    "            parameters, cost = gradient_descent(parameters, features, labels, num_features, learning_rate, layers, mini_batch_size)\n",
     "        \n",
     "            #maybe also write code for printing cost after each mini batch\n",
     "             #maybe write code for % success at test & val\n",
     "                \n",
+    "        \n",
     "        #TODO write code for printing cost after each epoch\n",
     "        #maybe write code for % success at test & val\n",
     "        \n",
@@ -369,6 +419,10 @@
     "        epoch-=1\n",
     "    \n",
     "    #TODO print final cost or costs AND plot graph of costs x iterations\n",
+    "    \n",
+    "    print(\"final cost: \"+cost)\n",
+    "    plt.plot(cost_tracker)\n",
+    "    plt.show()\n",
     "    \n",
     "    return parameters\n",
     "    #TODO write code for % success at test & val, cost using prediction()\n",
@@ -381,7 +435,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prediction(test_or_val = \"val\", val_or_test_neg_dset, val_or_test_pos_dset):\n",
+    "\n",
+    "\n",
+    "def prediction(test_or_val = \"val\", val_or_test_neg_dset, val_or_test_pos_dset, parameters):\n",
+    "    \n",
+    "    \n",
     "    #likely calls model() for parameters\n",
     "    #likely uses forward_prop() for finding y-hat\n",
     "    \n",
