accuracy function left

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -52,7 +52,14 @@
     "f = h5py.File(project+'.hdf5', \"r\")\n",
     "\n",
     "train_pos_dset = f['train/'+positive]\n",
-    "train_neg_dset = f['train/'+negative]\n"
+    "train_neg_dset = f['train/'+negative]\n",
+    "\n",
+    "val_pos_dset = f['val/'+positive]\n",
+    "val_neg_dset = f['val/'+negative]\n",
+    "\n",
+    "#test_pos_dset = f['test/'+positive]\n",
+    "#test_neg_dset = f['test/'+negative]\n",
+    "\n"
    ]
   },
   {
@@ -181,7 +188,7 @@
    "outputs": [],
    "source": [
     "def feature_label(neg_indices, pos_indices, train_neg_dset, train_pos_dset, mini_batch_size, num_features):\n",
-    "    #matrices containing our features and their labels\n",
+    "    #matrices containing our features and their labels for training set mini-batches\n",
     "            \n",
     "    \n",
     "    #(n[0],m) ... will transpose upon return\n",
@@ -378,7 +385,7 @@
    "outputs": [],
    "source": [
     "        \n",
-    "def model(train_pos_dset, train_neg_dset, val_pos_dset, val_neg_dset, mini_batch_size =32, layers = [1], epochs = 10000, print_cost=False, learning_rate=0.005):\n",
+    "def model(train_pos_dset, train_neg_dset, mini_batch_size =32, layers = [1], epochs = 10000, print_cost=False, learning_rate=0.005):\n",
     "    \n",
     "    #lets us track cost and later graph it\n",
     "    cost_tracker = np.zeroes([1000])\n",
@@ -406,11 +413,11 @@
     "            parameters, cost = gradient_descent(parameters, features, labels, num_features, learning_rate, layers, mini_batch_size)\n",
     "        \n",
     "            #maybe also write code for printing cost after each mini batch\n",
-    "             #maybe write code for % success at test & val\n",
+    "             #maybe write code for % success at test\n",
     "                \n",
     "        \n",
     "        #TODO write code for printing cost after each epoch\n",
-    "        #maybe write code for % success at test & val\n",
+    "        #maybe write code for % success at test\n",
     "        \n",
     "        #TODO track cost\n",
     "        cost_tracker[10000-epoch] = cost\n",
@@ -425,7 +432,7 @@
     "    plt.show()\n",
     "    \n",
     "    return parameters\n",
-    "    #TODO write code for % success at test & val, cost using prediction()\n",
+    "    #TODO write code for % success at test, cost using prediction()\n",
     "    "
    ]
   },
@@ -437,17 +444,22 @@
    "source": [
     "\n",
     "\n",
-    "def prediction(test_or_val = \"val\", val_or_test_neg_dset, val_or_test_pos_dset, parameters):\n",
+    "def prediction(pos_dset, neg_dset, parameters, layers):\n",
+    "    predictions_on_pos = np.empty([pos_dset.shape[0],1])\n",
+    "    predictions_on_neg = np.empty([pos_dset.shape[1],1])\n",
+    "    \n",
+    "    for pos in range(pos_dset.shape[0]):\n",
+    "        predictions_on_pos[pos] = forward_prop(parameters, pos_dset[pos].transpose(), layers)\n",
+    "    \n",
+    "    for neg in range(neg_dset.shape[0]):\n",
+    "        predictions_on_neg[neg] = forward_prop(parameters, neg_dset[neg].transpose(), layers)\n",
     "    \n",
     "    \n",
-    "    #likely calls model() for parameters\n",
-    "    #likely uses forward_prop() for finding y-hat\n",
-    "    \n",
-    "    #print parameters or log externally\n",
-    "    #TODO write code for eval % for val or test if exists\n",
+    "    return predictions_on_pos, predictions_on_neg\n",
     "    \n",
     "    \n",
-    "def accuracy(test_or_val = \"val\", predictions,val_or_test_neg_dset,val_or_test_pos_dset,show_wrong=3):\n",
+    "    \n",
+    "def accuracy(predictions, labels, show_wrong=3):\n",
     "    #TODO show accuracy and images that are incorrectly classified - default 3 from each class"
    ]
   },
@@ -457,15 +469,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "parameters = model(train_pos_dset, train_neg_dset, mini_batch_size =32, layers = [2,5,5,1], epochs = 10000, print_cost=False, learning_rate=0.005)\n",
+    "predictions_on_pos, predictions_on_neg = prediction(train_pos_dset, train_neg_dset, parameters, layers = [2,5,5,1])\n",
+    "predictions_on_pos, predictions_on_neg = prediction(val_pos_dset, val_neg_dset, parameters, layers = [2,5,5,1])\n",
+    "predictions_on_pos, predictions_on_neg = prediction(test_pos_dset, test_neg_dset, parameters, layers = [2,5,5,1])\n",
+    "accuracy()\n",
     "f.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
